--- a/shaders/shaders.qrc
+++ b/shaders/shaders.qrc
@@ -9,5 +9,7 @@
         <file>particles_draw.frag</file>
         <file>particles_draw.vert</file>
         <file>particles_update.frag</file>
+        <file>water.frag</file>
+        <file>water.vert</file>
     </qresource>
 </RCC>
