--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>960</width>
-     <height>18</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -47,8 +47,8 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>160</width>
-       <height>334</height>
+       <width>251</width>
+       <height>461</height>
       </rect>
      </property>
      <property name="minimumSize">
@@ -58,7 +58,7 @@
       </size>
      </property>
      <property name="title">
-      <string>FBOs</string>
+      <string>Firework</string>
      </property>
      <widget class="QRadioButton" name="modeBlur">
       <property name="geometry">
@@ -70,7 +70,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Blur</string>
+       <string>Water</string>
       </property>
       <property name="checked">
        <bool>true</bool>
@@ -86,8 +86,104 @@
        </rect>
       </property>
       <property name="text">
-       <string>Particles</string>
+       <string>Terrain</string>
       </property>
+     </widget>
+     <widget class="QGroupBox" name="brushColor">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>100</y>
+        <width>241</width>
+        <height>136</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Firework Data</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <property name="topMargin">
+        <number>5</number>
+       </property>
+       <property name="bottomMargin">
+        <number>5</number>
+       </property>
+       <property name="verticalSpacing">
+        <number>5</number>
+       </property>
+       <item row="0" column="2">
+        <widget class="QSlider" name="numFireSlide">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="QSlider" name="numParSlide">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="numParLabel">
+         <property name="text">
+          <string>NumPar</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="3">
+        <widget class="QLineEdit" name="numParTextbox">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLineEdit" name="numFireTextbox">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="numFireLabel">
+         <property name="text">
+          <string>NumFire</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
    </widget>
